[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["ororog"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "a"
path = "src/a.rs"

[[bin]]
name = "b"
path = "src/b.rs"

[[bin]]
name = "c"
path = "src/c.rs"

[[bin]]
name = "d"
path = "src/d.rs"

[[bin]]
name = "e"
path = "src/e.rs"

[[bin]]
name = "f"
path = "src/f.rs"
